welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: type green
while (!getColorSol():green)
                      ^Balin:2: error: not found: value getColorSol
while (!getColorSol():green)
        ^